# bleh

./: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json
src/: types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  state.rs
src-tauri/src/core/: audio.rs  mod.rs  scan.rs  song.rs
src/components/: AlbumsDisplay.tsx  ArtistsDisplay.tsx  CSidebar.tsx  ImageDisplay.tsx  Layout.tsx  MediaBar.tsx  Settings.tsx  SongDisplay.tsx
src/components/settings/: DirectoryTable.tsx
src/components/ui/: sidebar.tsx  slider.tsx
src/layouts/: Main.astro
src/pages/: albums.astro  artists.astro  index.astro  settings.astro  songs.astro
src/styles/: global.css
