[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
incremental = true
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 1
debug = false

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.2", features = ["test"] }
tauri-plugin-log = "2"
symphonia = { version = "0.5.4", features = ["mp3"] }
audiotags = "0.5.0"
tauri-plugin-dialog = "2"
rodio = "0.21.1"
metadata = "0.1.10"
rusqlite = "0.37.0"
uuid = { version = "1.17.0", features = ["v4"] }
tempfile = "3.20.0"
